--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Landing</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  
+
 
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="reset.css">
@@ -25,15 +25,16 @@
 <body>
   <!-- Navbar see 07 StuBootstrapComponents -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" style="background-color: rgb(119, 216, 161);" ; href="index.html">Latitude</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-      aria-controls="navbarNavSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <a class="navbar-brand" style="background-color: rgb(119, 216, 161); color:white; height:100%;"
+      href="index.html">Latitude</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+      aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
 
     <!-- Nav links see 07 StuBootstrapComponents-->
 
-    <div class="collapse navbar-collapse" id="navbarNavSupportedContent">
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
@@ -47,18 +48,21 @@
             <a class="dropdown-item" href="wind.html">Wind Speed</a>
           </div>
         </li>
+
         <li class="nav-item">
           <a class="nav-link" href="comparison.html">Comparison</a>
         </li>
+
         <li class="nav-item">
           <a class="nav-link" href="data.html">Data</a>
         </li>
+
       </ul>
     </div>
   </nav>
 
 
-  <!-- container for main box-->
+  <!-- container -->
   <div class="container">
     <div class="row">
 
@@ -86,13 +90,9 @@
 
       <div class="col-lg-1"></div>
       <div class="col-lg-4">
-
-
         <h6 class="title">Visualizations</h6>
         <hr>
-
         <div class="row">
-
           <div class="col-md-6 col-sm-3">
             <a href="temp.html">
               <img src="images/Fig1.png" width="175px" alt="Latitude vs. Max Temperature"
@@ -122,14 +122,14 @@
     </div>
   </div>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-  integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-  crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-  integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-  crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-  integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-  crossorigin="anonymous"></script>
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
