--- a/wind.html
+++ b/wind.html
@@ -4,83 +4,109 @@
 <head>
   <meta charset="UTF-8">
   <title>Wind</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="reset.css">
 </head>
 
 <body>
-<!-- Navbar see 07 StuBootstrapComponents -->
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" style="background-color: rgb(119, 216, 161);"; href="index.html">Latitude</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+  <!-- Navbar see 07 StuBootstrapComponents -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" style="background-color: rgb(119, 216, 161); color:white; height:100%;"
+      href="index.html">Latitude</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+      aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
 
-<!-- Nav links see 07 StuBootstrapComponents-->
-  
-<div class="collapse navbar-collapse" id="navbarNavDropdown">
-  <ul class="navbar-nav ml-auto">
-    <li class="nav-item dropdown">
-      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        Plots
-      </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="temp.html">Max Temperature</a>
-              <a class="dropdown-item" href="humidity.html">Humidity</a>
-              <a class="dropdown-item" href="cloudiness.html">Cloudiness</a>
-              <a class="dropdown-item" href="wind.html">Wind Speed</a>
-            </div>
-    </li>
-      <li class="nav-item">
-        <a class="nav-link" href="comparison.html">Comparison</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="data.html">Data</a>
-      </li>
-   </ul>
-  </div>
-</nav>
-  
- <!-- container for main box-->
-<div class="container">
-    <div class="col-lg-7 col-md-12">
-      <div class="description-content">
-        <h1 class="description-header">Wind Speed</h1>
+    <!-- Nav links see 07 StuBootstrapComponents-->
+
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false">
+            Plots
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="temp.html">Max Temperature</a>
+            <a class="dropdown-item" href="humidity.html">Humidity</a>
+            <a class="dropdown-item" href="cloudiness.html">Cloudiness</a>
+            <a class="dropdown-item" href="wind.html">Wind Speed</a>
+          </div>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link" href="comparison.html">Comparison</a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link" href="data.html">Data</a>
+        </li>
+
+      </ul>
+    </div>
+  </nav>
+
+  <!-- container for main box-->
+  <div class="container">
+    <div class="row">
+
+      <div class="col-lg-7 col-md-12">
+        <div class="description-content">
+          <h1 class="description-header">Wind Speed</h1>
+        </div>
         <hr>
-        <img src="images/Fig4.png" alt="Latitude vs. Wind Speed">
+        <img src="images/Fig4.png" width=650px alt="Latitude vs. Wind Speed">
         <p>Wind speed ranges between 0 and 10 mph for most cities in the world.</p>
       </div>
-    </div>
-</div>
 
- <div class="container">
-    <div class="row">
-      <div class="col-6">
-        <a href="temp.html">
-          <img src="images/Fig1.png" alt="Latitude vs. Max Temperature", title="Latitude vs. Max Temperature" class="imageNav-photo">
-        </a>
-      </div>
-      <div class="col-6">
-        <a href="humidity.html">
-         <img src="images/Fig2.png" alt="Latitude vs. Humidity", title="Latitude vs. Humidity" class="imageNav-photo">
-        </a>
-      </div>
-      <div class="col-6">
-        <a href="cloudiness.html">
-          <img src="images/Fig3.png" alt="Latitude vs. Cloudiness", title="Latitude vs. Cloudiness", class="imageNav-photo">
-        </a>
-      </div>
-      <div class="col-6">
-        <a href="wind.html">
-          <img src="images/Fig4.png" alt="Latitude vs. Wind Speed", title="Latitude vs. Wind Speed", class="imageNav-photo">
-        </a>
+      <div class="col-lg-1"></div>
+      <div class="col-lg-4">
+        <h6 class="title">Visualizations</h6>
+        <hr>
+        <div class="row">
+          <div class="col-md-6 col-sm-3">
+            <a href="temp.html">
+              <img src="images/Fig1.png" width="200px" alt="Latitude vs. Max Temperature"
+                title="Latitude vs. Max Temperature" class="imageNav-photo">
+            </a>
+          </div>
+          <div class="col-md-6 col-sm-3">
+            <a href="humidity.html">
+              <img src="images/Fig2.png" width="200px" alt="Latitude vs. Humidity" , title="Latitude vs. Humidity"
+                class="imageNav-photo">
+            </a>
+          </div>
+          <div class="col-md-6 col-sm-3">
+            <a href="cloudiness.html">
+              <img src="images/Fig3.png" width="200px" alt="Latitude vs. Cloudiness" , title="Latitude vs. Cloudiness" ,
+                class="imageNav-photo">
+            </a>
+          </div>
+          <div class="col-md-6 col-sm-3">
+            <a href="wind.html">
+              <img src="images/Fig4.png" width="200px" alt="Latitude vs. Wind Speed" , title="Latitude vs. Wind Speed" ,
+                class="imageNav-photo">
+            </a>
+          </div>
+        </div>
       </div>
     </div>
- </div>
+  </div>
+
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    crossorigin="anonymous"></script>
+
 </body>
+
 </html>
